--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,8 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "370aa1b6-a7c9-4955-a0bc-a2e93a8dd20a",
+   "id": "28676fb0-242b-4be0-826c-b5905c259241",
    "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4137ef0b-d4d2-427c-b5e4-730bd8c8111f",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "370aa1b6-a7c9-4955-a0bc-a2e93a8dd20a",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Data Science Tools and Ecosystem"
    ]
